Задание по HTML

--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,13 @@
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Zagolovok1</h1>
+        <h2>Zagolovok2</h2>
+        <ol>
+            <li><a href="https://www.spotify.com">Spotify</a></li>
+            <li><a href="https://ru.wikipedia.org">Wikipedia</a></li>
+            <li><a href="https://mcdonalds.ru/">McDonalds</a></li>
+        </ol>
+    </body>
 </html>
